// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Byline default snapshot test 1`] = `
<div
  className="byline"
>
  <Figure
    alignment="left"
    alt="picture of Puppet Sloth"
    className="mb-0"
    image="http://placekitten.com/300/300"
    imageClassName="avatar"
    size="small"
  >
    <strong>
      Puppet Sloth
    </strong>
    <br />
    <p
      className="text-sm text-gray-600"
    >
      DoSomething.org Staff
    </p>
  </Figure>
</div>
`;

exports[`Byline with props snapshot test 1`] = `
<div
  className="byline"
>
  <Figure
    alignment="left"
    alt="picture of Braümhilda Snosages"
    className="mb-0"
    image="http://placeimg.com/150/150/people"
    imageClassName="avatar"
    size="small"
  >
    <strong>
      Braümhilda Snosages
    </strong>
    <br />
    <p
      className="text-sm text-gray-600"
    >
      Campaign Tester
    </p>
  </Figure>
</div>
`;
